--- a/css/contacts.css
+++ b/css/contacts.css
@@ -15,13 +15,13 @@ body {
 /*Overlay*/
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 .addNewContactOverlay {
   position: fixed;
   top: 50%;
-  left: 35%;
+  left: calc(100vw / 2);
   right: -100%;
   transform: translate(-50%, -50%);
   width: 1212px;
