--- a/css/contacts_mediaqueries.css
+++ b/css/contacts_mediaqueries.css
@@ -45,8 +45,7 @@
   .addNewContactOverlay {
     position: fixed;
     top: 50%;
-    left: 35%;
-    right: -100%;
+    left: calc((100vw -396px) / 2) !important;
     transform: translate(-50%, -50%);
     background-color: white;
     box-shadow: -4px 0 6px 0 rgba(0, 0, 0, 0.1);
@@ -59,6 +58,12 @@
     gap: 49px;
     border-radius: 30px;
     display: flex;
+    animation: slide-top 0.5s ease-out;
+    transition: transform 0.5s ease-out;
+  }
+
+  .addNewContactOverlay.visible{
+    right: 0%;
   }
 
   .closeOverlayIcon {
@@ -185,6 +190,30 @@
     display: flex;
     align-items: baseline;
     justify-content: center;
+  }
+
+  /*Animation overlay window*/
+
+  @-webkit-keyframes slide-top {
+    0% {
+      -webkit-transform: translateY(0);
+      transform: translateY(0);
+    }
+    100% {
+      -webkit-transform: translateY(-100px);
+      transform: translateY(-100px);
+    }
+  }
+
+  @keyframes slide-top {
+    0% {
+      -webkit-transform: translateY(0);
+      transform: translateY(0);
+    }
+    100% {
+      -webkit-transform: translateY(-100px);
+      transform: translateY(-100px);
+    }
   }
 }
 
