--- a/css/contacts_mediaqueries.css
+++ b/css/contacts_mediaqueries.css
@@ -49,7 +49,7 @@
     transform: translate(-50%, -50%);
     background-color: white;
     box-shadow: -4px 0 6px 0 rgba(0, 0, 0, 0.1);
-    transition: right 0.5s ease;
+    /*transition: right 0.5s ease;*/
     z-index: 999;
     border-radius: 30px;
     opacity: 1;
@@ -60,10 +60,6 @@
     display: flex;
     animation: slide-top 0.5s ease-out;
     transition: transform 0.5s ease-out;
-  }
-
-  .addNewContactOverlay.visible{
-    right: 0%;
   }
 
   .closeOverlayIcon {
@@ -244,12 +240,23 @@
     box-shadow: 0px 4px 4px 0px #00000040;
   }
 
-  .headlinesContainer {
-    display: none;
+  .contactsHeadline {
+    font-size: 32px;
+    line-height: normal;
+  }
+
+  .subheadingContacts {
+    font-size: 20px;
+    line-height: normal;
+  }
+
+  .contactsHeadlineContainer::after {
+    transform: translateX(-180%);
   }
 
   .contactsSidebar {
     position: absolute;
+    left: 0;
   }
 
   .contactsArrow {
@@ -293,7 +300,7 @@
   }
 }
 
-@media (max-width: 428px) and (height: 766px) {
+@media (max-width: 428px) or (height: 766px) {
   .contactsSidebar {
     width: 428px;
     height: 766px;
