--- a/css/contactsEdit.css
+++ b/css/contactsEdit.css
@@ -3,7 +3,7 @@
 .editContactOverlay {
   position: fixed;
   top: 50%;
-  left: 35%;
+  left: calc(100vw / 2);
   right: -100%;
   transform: translate(-50%, -50%);
   width: 1212px;
