--- a/css/contacts_mediaqueries.css
+++ b/css/contacts_mediaqueries.css
@@ -211,6 +211,111 @@
       transform: translateY(-100px);
     }
   }
+
+  /*Edit contact Overlay*/
+  .editContactOverlay {
+    position: fixed;
+    top: 50%;
+    left: calc((100vw -396px) / 2) !important;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    box-shadow: -4px 0 6px 0 rgba(0, 0, 0, 0.1);
+    /*transition: right 0.5s ease;*/
+    z-index: 999;
+    border-radius: 30px;
+    opacity: 1;
+    width: 396px;
+    height: 760px;
+    gap: 49px;
+    border-radius: 30px;
+    display: flex;
+    animation: slide-top 0.5s ease-out;
+    transition: transform 0.5s ease-out;
+  }
+
+  /*New close button in white*/
+
+  .closeEditOverlayIcon {
+    display: none;
+  }
+
+  .whiteCloseEditOverlay {
+    top: 24px;
+    left: 348px;
+    padding: 4px;
+    gap: 0px;
+    border-radius: 56px;
+    opacity: 0px;
+    position: absolute;
+    display: flex;
+    cursor: pointer;
+  }
+
+  .closeEditButtonWhite {
+    width: 32px;
+    height: 32px;
+    border-radius: 56px;
+  }
+
+  .closeEditButtonWhite:hover {
+    border: 1px solid #29abe2;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    background-color: #29abe2;
+  }
+
+  .leftOverlayContentEdit {
+    width: 396px;
+    height: 352px;
+    padding: 66px 24px 66px 24px;
+    gap: 12px;
+    display: flex;
+    border-radius: 30px 30px 0px 0px;
+  }
+
+  .editOverlayHeadline {
+    font-size: 47px;
+  }
+
+  .overlayInitialsContainer {
+    width: 120px;
+    height: 120px;
+    top: 292px;
+    left: 138px;
+    gap: 0px;
+    border-radius: 70px;
+  }
+
+  .editButtons {
+    width: 201px;
+    height: 51px;
+    top: 647px;
+    left: 97.5px;
+    gap: 20px;
+    padding: 18px 10px 18px 10px;
+    border-radius: 10px;
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+  }
+
+  .editDeleteButton {
+    width: 82px;
+    height: 51px;
+    padding: 18px 10px 18px 10px;
+    gap: 10px;
+    display: flex;
+    align-items: center;
+  }
+
+  .editButtonOverlay {
+    width: 99px;
+    height: 51px;
+    padding: 18px 10px 18px 10px;
+    gap: 4px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+  }
 }
 
 @media (max-width: 880px) {
@@ -240,18 +345,41 @@
     box-shadow: 0px 4px 4px 0px #00000040;
   }
 
+  .fullContactHeader {
+    gap: 30px;
+  }
+
   .contactsHeadline {
     font-size: 32px;
     line-height: normal;
   }
 
   .subheadingContacts {
-    font-size: 20px;
+    font-size: 18px;
     line-height: normal;
   }
 
   .contactsHeadlineContainer::after {
-    transform: translateX(-180%);
+    transform: translateX(-170%);
+    bottom: -10px;
+  }
+
+  .contactDetailsInitials {
+    font-size: 30px;
+    width: 60px;
+    height: 60px;
+  }
+
+  .contactNameButtons {
+    gap: 0;
+  }
+
+  .contactInfoHeader {
+    font-size: 18px;
+  }
+
+  .contactDetailsName {
+    font-size: 16px;
   }
 
   .contactsSidebar {
@@ -272,31 +400,6 @@
     background-size: contain;
     background-repeat: no-repeat;
     top: -10px;
-  }
-
-  .dotIconContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .dotIcon {
-    cursor: pointer;
-    width: 56px;
-    height: 56px;
-    top: 758px;
-    left: 356px;
-    padding: 12px 0px 0px 0px;
-    gap: 10px;
-    border-radius: 56px;
-    display: flex;
-    position: fixed;
-  }
-
-  .dotIconContainer:hover {
-    background-image: url(../assets/img/dotIconBlue.svg);
-    border: none;
-    box-shadow: 0px 4px 4px 0px #00000040;
   }
 }
 
@@ -323,5 +426,32 @@
     gap: 10px;
     border-radius: 46px 0px 0px 0px;
     border: 1px solid transparent;
+  }
+
+  /*Dot icon edit overlay*/
+
+  .dotIconContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .dotIcon {
+    cursor: pointer;
+    width: 56px;
+    height: 56px;
+    top: 758px;
+    left: 356px;
+    padding: 12px 0px 0px 0px;
+    gap: 10px;
+    border-radius: 56px;
+    display: flex;
+    position: fixed;
+  }
+
+  .dotIconContainer:hover {
+    background-image: url(../assets/img/dotIconBlue.svg);
+    border: none;
+    box-shadow: 0px 4px 4px 0px #00000040;
   }
 }
